# tsp-genetic-algorithm

./: README.md  main.py  output.txt  pyproject.toml
inputs/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt
src/: genetic_algorithm.py
